Optimize tensor kernels and fix autograd correctness on Java 25
Reduce tensor allocations, use linear-time softmax gradients, and skip constant-operand derivatives. Fix broadcast gradients, empty broadcasting, and repeated backward accumulation. Align Java toolchains with 25 and add regression tests, a kernel benchmark, and performance documentation.